# quran-fractal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  verify.py
.github/workflows/: ci.yml  deploy-pages.yml
docs/: PROJECT-DOSSIER.md  ROADMAP.md  api-contract.md  architecture.md  contributing.md  data-sources.md  methodology.md
src/quran_fractal/: __init__.py  __main__.py  artifacts.py  assembler.py  cli.py  config.py  counting.py  hashes.py  loader.py  service.py
tanzil_data/: quran-simple-plain.txt
tests/: test_assembler.py  test_hashes.py  test_loader.py  test_pipeline.py
visualization/: index.html
web/: README.md  next.config.ts  package-lock.json  package.json
web/public/data/: quran-data.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/embed/: layout.tsx  page.tsx
web/src/app/explore/: page.tsx
web/src/components/: CountAlongMode.tsx  FractalVisualization.tsx  GroupDetailPanel.tsx  SurahBrowser.tsx  VerseReader.tsx  VizConfigPanel.tsx
web/src/hooks/: useAudioAnalyzer.ts
web/src/lib/: animationController.ts  gradientCache.ts  groups.ts  perlin.ts
web/src/stores/: count-along.ts  quran-data.ts  research.ts  viz-config.ts
web/src/views/: registry.ts
